<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/layout_padding"
    android:paddingEnd="@dimen/layout_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_nome"
        android:textAlignment="center"
        style="@style/NameStyle" />

    <EditText
        android:id="@+id/et_nickname"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nicname"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_feito"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/btn_feito" />

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_secondary_variant"
        android:paddingBottom="@dimen/small_padding"
        style="@style/NameStyle"
        android:textAlignment="center"
        android:visibility="gone"
        android:text=""/>


    <ImageView
        android:id="@+id/iv_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:contentDescription="@string/estrela_amarela"
        android:src="@android:drawable/btn_star_big_on"/>

    <ScrollView
        android:id="@+id/sv_bio"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_bio"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1"
            android:scrollbars="vertical"
            android:text="@string/bio"
            tools:text="@string/bio"/>
    </ScrollView>

</LinearLayout>